--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,15 +1,20 @@
 .tab-content {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    column-gap: 1pc;
-    row-gap: 1.5pc;
-
-    padding: 1pc;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    gap: 1rem; /* Adjust the gap as needed */
     width: 100%;
+    min-height: calc(100vh - 3rem - 1px);
+}
+
+.video-container {
+    flex: 1 calc(25% - 1rem); /* Adjust width to fit four items in a row, accounting for gaps */
+    height: calc(((100vw/4) - 1rem) * 9 / 16); /* Maintain 16:9 aspect ratio */
+    max-width: calc(25% - 1rem); /* Ensure max width is 25% minus the gap */
 }
 
 .video {
     width: 100%;
-    height: 260px;
+    height: 100%;
+    object-fit: cover;
 }
